<resources>
    <string name="app_name">Évén</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="back">Back</string>
    <string name="nameEvent">Event name</string>
    <string name="organizer">Organizer</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="organizedBy">Organized by:</string>
    <string name="eventInfo">Info</string>
    <string name="attendees">Attendees</string>
    <string name="comments">Comments</string>
    <string name="presences">Presences</string>
    <string name="created">Created</string>
    <string name="addCommentLabel">Comment</string>
    <string name="addCommentButton">Add comment</string>
    <string name="create">Create</string>
    <string name="commentCreated">Comment successfully added</string>
    <string name="save">Save</string>
    <string name="cancelEvent">Cancel event</string>
    <string name="iconMenuRecent">Recent events</string>
    <string name="iconMenuRecherche">Search</string>
    <string name="iconMenuMesEvens">My events</string>
    <string name="byKeyword">By keyword</string>
    <string name="byMonth">By month</string>
    <string name="byLocation">By location</string>
    <string name="byCreator">By organizer</string>
    <string name="search">Search</string>
    <string name="changeAvatar">Change avatar</string>
    <string name="participant">attendee(s)</string>
    <string name="participation">I\'m attending</string>
    <string name="nonParticipation">I\'m not attending</string>
    <string name="addCalendar">Add to calendar</string>
    <string name="participationAdded">Your participation was added</string>
    <string name="participationRemoved">Your participation was removed</string>
    <string name="number">0</string>
    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>
    <string name="account_management">Manage account</string>
    <string name="login">Log in</string>
    <string name="log_off">Log off</string>
    <string name="log_off_msg">Logging off</string>
    <string name="my_event">My events</string>
    <string name="recent_event">Recent events</string>
    <string name="commentFor">Comment for:</string>
    <string name="sign_up_completed">Sign up completed</string>
    <string name="sign_up_incompleted">Please verify the areas marked in red</string>
    <string name="login_completed">You are now logged in</string>
    <string name="login_incompleted">Connection error, verify that the entered information is correct</string>
    <string name="serveur_error">A technical problem prevents you from continuing</string>
    <string name="connection_error">Connection error</string>
    <string name="no_comments">There are no comments for this event</string>
    <string name="no_result">No results...</string>
    <string name="not_going_to_any_event">You did not announce your attendance to any events</string>
    <string name="no_any_recent_event">No events to be viewed</string>
    <string name="no_any_created_event">No organized events</string>

</resources>
